# ood-bot-ai

./: .dockerconfigjson  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
.github/ ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: base.yaml
infra/: bot-deploy.yaml  bot-docker-secret.yaml  deploy.yaml  docker-secret.yaml  redis.yaml  secret.yaml
src/: asserts.py  main.py
src/bot/: __init__.py
src/bot/commands/: __init__.py  ask_ai_command.py  summarize_command.py
src/core/: config.py
src/storage/: __init__.py
src/url/: __init__.py  normalizer.py  parser.py  save_link.py
tests/: test_save_link.py  test_url_parser.py
